@@ -72,7 +72,8 @@ EvtTauolaEngine::EvtTauolaEngine(bool useEvtGenRandom) {
       
   }
 
-  // Use the new chiral current calculations
+  // Use the BaBar-tuned chiral current calculations by default. Can be changed using the
+  // TauolaCurrentOption keyword in decay files
   Tauolapp::Tauola::setNewCurrents(1);
 
   Tauolapp::Tauola::initialize();
@@ -290,7 +291,7 @@ void EvtTauolaEngine::setOtherParameters() {
   if (mixString != "TauolaHiggsMixingAngle") {
 
       double mixAngle = std::atof(mixString.c_str());
-      EvtGenReport(EVTGEN_INFO,"EvtGen")<<"Setting TAUOLA Higgs mixing angle to "<<mixAngle<<" radians"<<endl;
+      EvtGenReport(EVTGEN_INFO,"EvtGen")<<"TAUOLA Higgs mixing angle set to "<<mixAngle<<" radians"<<endl;
       Tauolapp::Tauola::setHiggsScalarPseudoscalarMixingAngle(mixAngle);
 
   }
@@ -324,17 +325,17 @@ void EvtTauolaEngine::setOtherParameters() {
 
   Tauolapp::Tauola::setTaukle(BRVect[0], BRVect[1], BRVect[2], BRVect[3]);
 
-  // 5) TauolaUseOldCurrents: Specify if we want to use the old CLEO hadronic currents (default is false).
-  // This can be (re)set after initialized() has been called.
-  std::string currentString = EvtSymTable::get("TauolaUseOldCurrents", iErr);
 
-  if (currentString != "TauolaUseOldCurrents") {
+  // 5) Specify the hadronic current option, e.g. orig CLEO = 0, BaBar-tuned = 1 (default), ...
+  // No check is made by EvtGen on valid integer options - its just passed to Tauola
+  std::string currentOption = EvtSymTable::get("TauolaCurrentOption", iErr);
+  // If the definition name is not found, get() just returns the first argument string
+  if (currentOption != "TauolaCurrentOption") {
 
-      int useOldCurrents = std::atoi(currentString.c_str());
-      if (useOldCurrents == 1) {
-	  EvtGenReport(EVTGEN_INFO,"EvtGen")<<"TAUOLA warning: Using old CLEO hadronic currents"<<endl;
-	  Tauolapp::Tauola::setNewCurrents(0);
-      }
+      int currentOpt = std::atoi(currentOption.c_str());
+      EvtGenReport(EVTGEN_INFO,"EvtGen")<<"TAUOLA current option = "<<currentOpt<<endl;
+
+      Tauolapp::Tauola::setNewCurrents(currentOpt);
 
   }
 
